# VibeApp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  README_EN.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
build-engine/: build.gradle.kts
build-gradle/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
build-runtime/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
build-runtime/src/main/cpp/: CMakeLists.txt  jni_process_launcher.c  placeholder.c  process_launcher.c  process_launcher.h
build-runtime/src/main/cpp/termux_exec/: termux_exec.c  termux_exec.h
docs/: README.md  agent-loop-optimization.md  ai-strategy.md  androidx-precompiled-libs.md  apk-size-optimization.md  app-module-cleanup.md  architecture.md  background-agent-service.md  build-chain.md  build-engine.md  chat-diagnostic-logging.md  community-template-marketplace-strategy.md  context-compaction-redesign.md  debug-diagnostic-viewer.md  design-read-app-log.md  function-calling-agent-loop.md  grep-project-files-tool.md  icon-preset-library-strategy.md  image-and-icon-enhancement.md  java-xml-build-flow-migration.md  jsoup-network-integration.md  multi-project-management.md  plan-mode-research.md  plugin-ui-inspection-and-automation.md  prompt-guide.md  release-process.md  shadow-plugin-feasibility.md  smarter-auto-fix-strategy.md  theme-and-performance-optimization.md  ui-pattern-manual-smoke.md  ui-theme-analysis.md  voice-input-research.md  webview-crawler-research.md
memory/: MEMORY.md
(+558 files in other folders)
